# WalkEasyApp

./: .gitignore  README.md  settings.gradle.kts
OpenCV/: build.gradle
OpenCV/java/src/org/opencv/aruco/: Aruco.java
OpenCV/java/src/org/opencv/core/: Core.java
OpenCV/java/src/org/opencv/img_hash/: Img_hash.java
OpenCV/java/src/org/opencv/imgproc/: Imgproc.java
OpenCV/java/src/org/opencv/text/: Text.java
OpenCV/java/src/org/opencv/xfeatures2d/: Xfeatures2d.java
OpenCV/java/src/org/opencv/ximgproc/: Ximgproc.java
OpenCV/java/src/org/opencv/xphoto/: Xphoto.java
OpenCV/native/jni/: OpenCV.mk  OpenCVConfig.cmake
OpenCV/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake
OpenCV/native/jni/abi-armeabi-v7a/: OpenCVModules-release.cmake  OpenCVModules.cmake
OpenCV/native/jni/abi-x86/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
OpenCV/native/jni/abi-x86_64/: OpenCVConfig.cmake  OpenCVModules-release.cmake
OpenCV/native/jni/include/opencv2/: opencv_modules.hpp
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/susano/WalkEasy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ssd_labels.txt
app/src/main/cpp/: CMakeLists.txt  SpatialAudio.cpp  SpatialAudio.h  StereoGlasses.cpp  StereoGlasses.h  native-lib.cpp
app/src/main/java/com/susano/WalkEasy/: MainActivity.java
app/src/main/java/com/susano/WalkEasy/ESP_Cam/: Camera.java  MyWebSocketServer.java  RenderFrame.java  RenderFrameImplementation.java  RenderFrameInterface.java  cameraView.java
app/src/main/java/com/susano/WalkEasy/ESP_Cam/OpenGL/: OpenGLRenderer.java  OpenGLView.java
app/src/main/java/com/susano/WalkEasy/ObjectDetection/main/: object_main.java
app/src/main/java/com/susano/WalkEasy/ObjectDetection/tflite/: Classifier.java  Recognition.java  TFLiteObjectDetectionAPIModel.java  TFLiteObjectDetectionSSDAPIModel.java  TFLiteSegmentationAPIModel.java  TFLiteYoloV5.java
app/src/main/java/com/susano/WalkEasy/SpatialSound/: SpatialInterface.java  SpatialSound.java
app/src/main/res/drawable-anydpi-v26/: walkeasy.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/susano/WalkEasy/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
